include/dss_capi.h

    /*
    Returns index of the active branch
    */
    DSS_CAPI_DLL int32_t Topology_Get_ActiveBranch(void);
    /*
    First load at the active branch, return index or 0 if none.
    */
    DSS_CAPI_DLL int32_t Topology_Get_FirstLoad(void);
    /*
    Next load at the active branch, return index or 0 if no more.
    */
    DSS_CAPI_DLL int32_t Topology_Get_NextLoad(void);
    /*
    Number of isolated loads
    */
    DSS_CAPI_DLL int32_t Topology_Get_NumIsolatedLoads(void);
    /*
    Topological depth of the active branch
    */
    DSS_CAPI_DLL int32_t Topology_Get_ActiveLevel(void);
    DSS_CAPI_DLL char* Topology_Get_BusName(void);
    /*
    Set the active branch to one containing this bus, return index or 0 if not found
    */
    DSS_CAPI_DLL void Topology_Set_BusName(char* Value);