src/CAPI/CAPI_Topology.pas


//------------------------------------------------------------------------------
function Topology_Get_FirstLoad(): Integer; CDECL;
var
    node: TCktTreeNode;
    elm: TDSSCktElement;
begin
    Result := 0;
    if not ActiveTreeNode(node) then
        Exit;
    elm := node.FirstShuntObject;
    if assigned(elm) then
    begin
        ActiveCircuit.ActiveCktElement := elm;
        Result := 1;
    end;
end;
//------------------------------------------------------------------------------
function Topology_Get_NextLoad(): Integer; CDECL;
var
    node: TCktTreeNode;
    elm: TDSSCktElement;
begin
    Result := 0;
    if not ActiveTreeNode(node) then
        Exit;

    elm := node.NextShuntObject;
    if assigned(elm) then
    begin
        ActiveCircuit.ActiveCktElement := elm;
        Result := 1;
    end;
end;
//------------------------------------------------------------------------------
function Topology_Get_NumIsolatedLoads(): Integer; CDECL;
var
    elm: TPCElement;
    topo: TCktTree;
begin
    Result := 0;
    if not ActiveTree(topo) then
        Exit;
        
    elm := ActiveCircuit.PCElements.First;
    while assigned(elm) do
    begin
        if elm.IsIsolated then
            Inc(Result);
        elm := ActiveCircuit.PCElements.Next;
    end;
end;
//------------------------------------------------------------------------------
function Topology_Get_ActiveLevel(): Integer; CDECL;
begin
    Result := Topology_Get_ActiveBranch;
end;
//------------------------------------------------------------------------------
function Topology_Get_BusName(): PAnsiChar; CDECL;
var
    node: TCktTreeNode;
    elm: TDSSCktElement;
begin
    Result := NIL;
    if not ActiveTreeNode(node) then
        Exit;
    elm := node.CktObject;
    if assigned(elm) then
        Result := DSS_GetAsPAnsiChar(elm.FirstBus);
end;
//------------------------------------------------------------------------------
procedure Topology_Set_BusName(const Value: PAnsiChar); CDECL;
var
    topo: TCktTree;
    S, B: String;
    Found: Boolean;
    elem: TDSSCktElement;
    pdElem: TPDElement;
begin
    if not ActiveTree(topo) then
        Exit;

    Found := FALSE;
    elem := NIL;
    S := Value;  // Convert to Pascal String
    elem := ActiveCircuit.ActiveCktElement;
    pdElem := topo.First;
    while Assigned(pdElem) and (not found) do
    begin
        B := pdElem.FirstBus;
        while Length(B) > 0 do
        begin
            if (CompareText(B, S) = 0) then
            begin
                ActiveCircuit.ActiveCktElement := pdElem;
                Found := TRUE;
                Break;
            end;
            B := pdElem.NextBus;
        end;
        pdElem := topo.GoForward;
    end;
    if not Found then
    begin
        DoSimpleMsg('Bus "' + S + '" Not Found in Active Circuit Topology.', 5003);
        if assigned(elem) then
            ActiveCircuit.ActiveCktElement := elem;
    end;
end;
//------------------------------------------------------------------------------
end.
